projects/compiler/test/typechecker/import/error_no_file_exists.out
Error at %FILE_NAME%:1:17
Could not import module
  |  import foo from "./huh"
                     ^
No file exists at path '%TEST_DIR%/typechecker/import/huh.abra'
